<resources>
    <string name="app_name">Recetas</string>

    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>
    <string name="Titulo_RL_Admin">Titulo</string>

    <string name="Txt_rol">Ingresa para poder ver las recetas</string>
    <string name="Btn_rol_admin">Administrador</string>
    <string name="Btn_rol_cliente">Inicia Sesión</string>

    <string name="TxtRegistroAdmin">Registro de Administrador</string>

    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_email_admin">Email</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_password_confirm_admin">Repeta la Contraseña</string>
    <string name="Btn_registrar_admin">Registrarme</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta.</string>

    <string name="CerrarSesionAdmin">Cerrar Sesión</string>"

    <string name="TxtLoginAdmin">Login adminisradores</string>
    <string name="Btn_login_admin">Ingresar</string>

    <string name="Btn_agregar_categortia">Agregar Categoría</string>
    <string name="Txt_agregar_categoria">Agregar Categoría</string>
    <string name="Et_categoria">Ingrese Categoría</string>

    <string name="Agregar_categoria_BD">Agregar</string>
    <string name="Item_nombre_cat_a">Nombre Categoría</string>
    <string name="Buscar_categoria">Buscar Receta</string>

    <string name="Txt_agregar_libro">Agregar Libro</string>
    <string name="Et_titulo_libro">Titulo Libro</string>
    <string name="Et_descripcion_libro">Descripción Libro</string>
    <string name="Tv_categoria_libro">Categoría</string>
    <string name="Btn_subir_libro">Subir Libro</string>

    <string name="Txt_titulo_libro">Recetas</string>
    <string name="Txt_categoria_libro">Categoría</string>
    <string name="Et_buscar_libro_admin">Buscar Recetas</string>

    <string name="Txt_titulo_libro_item">Titulo Receta</string>
    <string name="Txt_descripcion_libro_item">Descripción Receta</string>
    <string name="Txt_categoria_libro_admin">Categoría</string>
    <string name="Txt_tamaño_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>

    <string name="Txt_actualizar_libro">Actualizar Receta</string>
    <string name="Btn_actualizar_libro">Actualizar</string>

    <string name="Txt_detalle_libro">Detalle Libro</string>

    <string name="titulo_detalle_libro">Titulo Libro</string>
    <string name="Txt_categoria_D">Categoría: </string>
    <string name="categoria_D"> -- </string>

    <string name="Txt_fecha_D"> Fecha: </string>
    <string name="fecha_D"> -- </string>
    <string name="Txt_tamaño_D">Tamaño: </string>
    <string name="tamaño_D"> -- </string>
    <string name="Txt_vistas_D">Vistas: </string>
    <string name="vistas_D"> -- </string>
    <string name="Txt_descargas_D">Descargas: </string>
    <string name="descargas_D">--</string>
    <string name="Txt_paginas_D">Páginas: </string>
    <string name="paginas_D">--</string>

    <string name="Txt_descripcion_D">Descripción: </string>
    <string name="descripcion_D">--</string>
    <string name="Btn_leer_libro">Leer</string>
    <string name="Txt_leer_libro">Lectura del Libro</string>

    <!-- Perfil del administrador -->
    <string name="nombre_admin">Nombre: </string>
    <string name="Txt_nombre_admin"> -- </string>
    <string name="email_admin">Email</string>
    <string name="Txt_email_admin"> -- </string>
    <string name="tiempo_registro_admin">Miembro desde: </string>
    <string name="Txt_tiempo_registro_admin"> -- </string>
    <string name="rol_admin">Rol: </string>
    <string name="Txt_rol_admin"> -- </string>

    <string name="Txt_mas_opciones">Más Opciones: </string>
    <string name="EditarPerfilAdmin">Editar Perfil</string>
    <string name="Txt_editar_perfil_admin">Editar Perfil</string>
    <string name="Et_a_nombres">Nombres</string>
    <string name="Btn_actualizar_info">Actualizar</string>

    <string name="Txt_registrar_cliente">Registrar Cliente</string>

    <string name="Et_nombres_cliente">Nombres</string>
    <string name="Et_edad_cliente">Edad</string>
    <string name="Et_email_cliente">Email</string>
    <string name="Et_password_cliente">Contraseña</string>
    <string name="Et_password_confirm_cliente">Repetir Contraseña</string>
    <string name="Btn_registrar_cliente">Registrarme</string>

    <string name="Menu_dashboard_cl">Dashboard</string>
    <string name="Menu_favoritos_cl">Favoritos</string>
    <string name="Menu_ia_cl">ChatIA</string>
    <string name="Menu_cuenta_cl">Cuenta</string>

    <string name="Titulo_RL_Cliente">Titulo</string>
    <string name="CerrarSesionCliente">Cerrar Sesión</string>

    <string name="Txt_login_cliente">Login Cliente</string>
    <string name="Btn_login_cliente">Ingresar</string>

    <!-- Login Google -->
    <string name="Txt_alternativa">Alternativa</string>
    <string name="Btn_login_google">Ingresar con Google</string>
    <string name="Item_nombre_cat_c">Nombre receta</string>
    <string name="Et_buscar_libro_cliente">Buscar Recetas</string>

    <string name="Btn_leer_libro_c">Leer</string>
    <string name="Btn_descargar_libro_c">Descargar</string>
    <string name="Btn_favoritos_libro_C">Favoritos</string>


    <string name="Btn_mas_vistos">Más vistos</string>
    <string name="Btn_mas_descargados">Más descargados</string>
    <string name="Txt_comentarios">Comentarios</string>

    <string name="Txt_agregar_comentario">Agregar Comentario</string>
    <string name="Et_agregar_comentario">Escribe tu Comentario</string>
    <string name="Btn_comentario">Comentar</string>

    <string name="Tv_nombre_c">Nombre cliente</string>
    <string name="Tv_fecha_c">dd/MM/yyyy</string>
    <string name="Tv_comentario_c">Comentario de usuario</string>

    <string name="nombres_cliente">Nombre: </string>
    <string name="Txt_nombre_cliente"> -- </string>
    <string name="edad_cliente">Edad: </string>
    <string name="Txt_edad_cliente"> -- </string>
    <string name="email_cliente">Email: </string>
    <string name="Txt_email_cliente"> -- </string>
    <string name="tiempo_registro_cliente">Miembro desde: </string>
    <string name="Txt_tiempo_registro_cliente"> -- </string>
    <string name="rol_cliente">Rol: </string>
    <string name="Txt_rol_cliente"> -- </string>

    <string name="EditarPerfilCliente">Editar Perfil</string>

    <string name="Txt_editar_perfil_cliente">Editar Perfil</string>

    <string name="Et_c_nombre">Nombres</string>
    <string name="Et_c_edad">Edad</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">530485053903-o8l5sdkn2ffemj6f0fa25oifkfcffvu0.apps.googleusercontent.com</string>

</resources>