<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.DetalleLibro">

    <RelativeLayout
        android:id="@+id/toolbarRLDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_regresar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Txt_detalle_libro" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#cccccc" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRLDetalle"
        android:padding="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/pdfRL"
                    android:layout_width="100dp"
                    android:layout_height="170dp"
                    android:layout_marginEnd="5dp"
                    android:background="#cccccc">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/VisualizadorPDF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/titulo_detalle_libro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/pdfRL"
                    android:text="@string/titulo_detalle_libro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titulo_detalle_libro"
                    android:layout_toEndOf="@+id/pdfRL">

                    <!--Categoria-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/categoria_D"
                            android:text="@string/categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>
                    <!--Fecha-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/fecha_D"
                            android:text="@string/fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>
                    <!--Tamaño-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_tamaño_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/size_D"
                            android:text="@string/tamaño_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>
                    <!--Vistas-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/vistas_D"
                            android:text="@string/vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>
                    <!--Descargas-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_descargas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/descargas_D"
                            android:text="@string/descargas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>
                    <!--Paginas-->
                    <TableRow
                        android:layout_marginTop="5dp">

                        <TextView
                            android:text="@string/Txt_paginas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                        <TextView
                            android:id="@+id/paginas_D"
                            android:text="@string/paginas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp" />

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:text="@string/Txt_descripcion_D"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/descripcion_D"
                android:text="@string/descripcion_D"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>