<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Fragmentos_Cliente.Fragment_cliente_cuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_perfil_cliente"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_perfil" />

        <!--Nombre-->
        <TextView
            android:id="@+id/nombres_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_perfil_cliente"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nombres_cliente" />

        <TextView
            android:id="@+id/Txt_nombre_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_perfil_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Txt_nombre_cliente" />

        <!--Email-->

        <TextView
            android:id="@+id/email_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombres_cliente"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/email_cliente" />

        <TextView
            android:id="@+id/Txt_email_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombres_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Txt_email_cliente" />

        <!--Miembro desde-->

        <TextView
            android:id="@+id/tiempo_registro_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_cliente"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/tiempo_registro_cliente" />

        <TextView
            android:id="@+id/Txt_tiempo_registro_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Txt_tiempo_registro_cliente" />

        <!--EDAD-->

        <TextView
            android:id="@+id/edad_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiempo_registro_cliente"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/edad_cliente" />

        <TextView
            android:id="@+id/Txt_edad_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiempo_registro_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Txt_edad_cliente" />

        <!--Rol-->

        <TextView
            android:id="@+id/rol_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edad_cliente"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/rol_cliente" />

        <TextView
            android:id="@+id/Txt_rol_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edad_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/Txt_rol_cliente" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rol_cliente"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Txt_mas_opciones" />

            <!--Cerrar sesión-->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/CerrarSesionCliente"
                    android:fontFamily="@font/poppins_medium"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    app:drawableStartCompat="@drawable/ic_cerrar_sesion" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>



</ScrollView>