<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="#ffcfa9"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RLPdf"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="10dp"
            android:background="#ffe9d5">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/VisualizadorPDF"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/Txt_titulo_libro_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/RLPdf"
            android:fontFamily="@font/poppins_semi_bold"
            android:maxLines="1"
            android:text="@string/Txt_titulo_libro_item"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Txt_descripcion_libro_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Txt_titulo_libro_item"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/RLPdf"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="4"
            android:text="@string/Txt_descripcion_libro_item"
            android:textColor="#000" />

        <TextView
            android:id="@+id/Txt_categoria_libro_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/montserrat_semi_bold"
            android:maxLines="1"
            android:text="@string/Txt_categoria_libro_admin"
            android:textColor="#000" />


        <TextView
            android:id="@+id/Txt_tamaño_libro_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/RLPdf"
            android:fontFamily="@font/montserrat_semi_bold"
            android:maxLines="1"
            android:text="@string/Txt_tamaño_libro_admin"
            android:textColor="#000" />

        <TextView
            android:id="@+id/Txt_fecha_libro_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/Txt_categoria_libro_admin"
            android:layout_toEndOf="@+id/Txt_tamaño_libro_admin"
            android:fontFamily="@font/montserrat_semi_bold"
            android:maxLines="1"
            android:text="@string/Txt_fecha_libro_admin"
            android:textAlignment="center"
            android:textColor="#000" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>