<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:padding="5dp"
        android:text="@string/Txt_agregar_comentario"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/Ib_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_cerrar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ib_cerrar"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/Et_agregar_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:hint="@string/Et_agregar_comentario"
            android:inputType="textMultiLine|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TIL_comentario"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Btn_comentario"
        android:textAllCaps="true" />

</RelativeLayout>